--- a/api-server/package.json
+++ b/api-server/package.json
@@ -2,8 +2,9 @@
   "name": "api-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",  
   "scripts": {
+    "start": "node server.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "node-fetch": "^2.6.7"  
+  },
+  "engines": {
+    "node": "18.x"  
   }
 }
